--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,8 @@ Description: An open, multi-algorithmic pipeline for easy, fast and efficient an
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends:
+    R (>= 2.10)
 Suggests: 
     knitr,
     rmarkdown
