Slight reorganization of class objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,20 @@
 
 export()
 export(ClassVectoringDT)
+export(Clustexp)
 export(DEGanalysis)
 export(DEGanalysisM)
 export(Exprmclust)
+export(FindOutliersKM)
+export(FindOutliersMB)
 export(J48DT)
 export(Jaccard)
+export(KMClustDiffGenes)
+export(KMclustheatmap)
 export(KmeanOrder)
+export(MBClustDiffGenes)
 export(MB_Order)
+export(MBclustheatmap)
 export(NetAnalysis)
 export(Networking)
 export(NoiseFiltering)
@@ -20,12 +27,39 @@ export(Plotmclust)
 export(RpartDT)
 export(binompval)
 export(clustfun)
+export(comptSNE)
+export(comptsneMB)
 export(cross.val)
 export(dist.gen)
 export(downsample)
 export(estimateSizeFactorsForMatrix)
+export(plotExptSNE)
+export(plotGap)
+export(plotMBLabelstSNE)
+export(plotSilhouette)
+export(plotSymbolstSNE)
+export(plotexptsneMB)
+export(plotsilhouetteMB)
+export(plottSNE)
+export(plottsneMB)
 exportClasses("PSCANseq ")
+exportMethods(FindOutliersKM)
+exportMethods(FindOutliersMB)
+exportMethods(KMClustDiffGenes)
+exportMethods(KMclustheatmap)
+exportMethods(MBClustDiffGenes)
+exportMethods(MBclustheatmap)
+exportMethods(comptSNE)
+exportMethods(comptsneMB)
 exportMethods(initialize)
+exportMethods(plotExptSNE)
+exportMethods(plotMBLabelstSNE)
+exportMethods(plotSilhouette)
+exportMethods(plotSymbolstSNE)
+exportMethods(plotexptsneMB)
+exportMethods(plotsilhouetteMB)
+exportMethods(plottSNE)
+exportMethods(plottsneMB)
 importFrom(IRanges,distance)
 importFrom(NetIndices,GenInd)
 importFrom(RColorBrewer,brewer.pal)
