Split generics of DIscBIO into their own files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,3 +36,55 @@ Suggests:
 	testthat
 VignetteBuilder: knitr
 RoxygenNote: 7.0.2
+Collate: 
+    'ClassVectoringDT.R'
+    'DEGanalysis.R'
+    'DEGanalysisM.R'
+    'DIscBIO-classes.R'
+    'DIscBIO-generic-Clustexp.R'
+    'DIscBIO-generic-FindOutliersKM.R'
+    'DIscBIO-generic-FindOutliersMB.R'
+    'DIscBIO-generic-KMClustDiffGenes.R'
+    'DIscBIO-generic-KMclustheatmap.R'
+    'DIscBIO-generic-MBClustDiffGenes.R'
+    'DIscBIO-generic-MBclustheatmap.R'
+    'DIscBIO-generic-Normalizedata.R'
+    'DIscBIO-generic-comptSNE.R'
+    'DIscBIO-generic-comptsneMB.R'
+    'DIscBIO-generic-plotExptSNE.R'
+    'DIscBIO-generic-plotGap.R'
+    'DIscBIO-generic-plotKmeansLabelstSNE.R'
+    'DIscBIO-generic-plotMBLabelstSNE.R'
+    'DIscBIO-generic-plotSilhouette.R'
+    'DIscBIO-generic-plotSymbolstSNE.R'
+    'DIscBIO-generic-plotexptsneMB.R'
+    'DIscBIO-generic-plotsilhouetteMB.R'
+    'DIscBIO-generic-plottSNE.R'
+    'DIscBIO-generic-plottsneMB.R'
+    'Exprmclust.R'
+    'J48DT.R'
+    'J48DTeval.R'
+    'Jaccard.R'
+    'KmeanOrder.R'
+    'MB_Order.R'
+    'NetAnalysis.R'
+    'Networking.R'
+    'NoiseFiltering.R'
+    'PCAplotSymbols.R'
+    'PPI.R'
+    'PlotMBorderPCA.R'
+    'Plotmclust.R'
+    'RpartDT.R'
+    'RpartEVAL.R'
+    'SN_SP_ACC_MCC.R'
+    'VolcanoPlot.R'
+    'add_legend.R'
+    'binompval.R'
+    'clustfun.R'
+    'cross.val.R'
+    'datasets.R'
+    'dist.gen.R'
+    'dist.gen.pairs.R'
+    'downsample.R'
+    'estimateSizeFactorsForMatrix.R'
+    'eval.pred.R'
