--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,7 +59,6 @@ exportMethods(plotexptsneMB)
 exportMethods(plotsilhouetteMB)
 exportMethods(plottSNE)
 exportMethods(plottsneMB)
-importFrom(IRanges,distance)
 importFrom(NetIndices,GenInd)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RWeka,J48)
@@ -134,6 +133,7 @@ importFrom(mclust,Mclust)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(partykit,as.party)
+importFrom(philentropy,distance)
 importFrom(png,readPNG)
 importFrom(readr,read_tsv)
 importFrom(rpart,rpart)
