Added missing arguments and dependencies, added quiet/plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(igraph,mean_distance)
 importFrom(igraph,minimum.spanning.tree)
 importFrom(matrixStats,rowVars)
 importFrom(mclust,Mclust)
+importFrom(mclust,mclustBIC)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(partykit,as.party)
