--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,11 +37,11 @@ Suggests:
 VignetteBuilder: knitr
 RoxygenNote: 7.0.2
 Collate: 
-    'ClassVectoringDT.R'
-    'DEGanalysis.R'
-    'DEGanalysisM.R'
     'DIscBIO-classes.R'
+    'DIscBIO-generic-ClassVectoringDT.R'
     'DIscBIO-generic-Clustexp.R'
+    'DIscBIO-generic-DEGanalysis.R'
+    'DIscBIO-generic-DEGanalysisM.R'
     'DIscBIO-generic-FindOutliersKM.R'
     'DIscBIO-generic-FindOutliersMB.R'
     'DIscBIO-generic-KMClustDiffGenes.R'
@@ -62,11 +62,11 @@ Collate:
     'DIscBIO-generic-plottSNE.R'
     'DIscBIO-generic-plottsneMB.R'
     'Exprmclust.R'
+    'FinalPreprocessing.R'
     'J48DT.R'
     'J48DTeval.R'
     'Jaccard.R'
     'KmeanOrder.R'
-    'KmeansCBI.R'
     'Kmeansruns.R'
     'MB_Order.R'
     'NetAnalysis.R'
@@ -75,18 +75,10 @@ Collate:
     'PCAplotSymbols.R'
     'PPI.R'
     'PlotMBorderPCA.R'
-    'Plotmclust.R'
+    'PlotmclustMB.R'
     'RpartDT.R'
     'RpartEVAL.R'
-    'SN_SP_ACC_MCC.R'
     'VolcanoPlot.R'
-    'add_legend.R'
-    'binompval.R'
-    'clustfun.R'
-    'cross.val.R'
     'datasets.R'
-    'dist.gen.R'
-    'dist.gen.pairs.R'
-    'downsample.R'
-    'estimateSizeFactorsForMatrix.R'
-    'eval.pred.R'
+    'plotOrderKMtsne.R'
+    'plotOrderMBtsne.R'
