--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,16 @@ export(ClassVectoringDT)
 export(Clustexp)
 export(DEGanalysis)
 export(DEGanalysisM)
-export(Exprmclust)
+export(ExprmclustMB)
+export(FinalPreprocessing)
 export(FindOutliersKM)
 export(FindOutliersMB)
 export(J48DT)
+export(J48DTeval)
 export(Jaccard)
 export(KMClustDiffGenes)
 export(KMclustheatmap)
 export(KmeanOrder)
-export(KmeansCBI)
 export(MBClustDiffGenes)
 export(MB_Order)
 export(MBclustheatmap)
@@ -22,20 +23,19 @@ export(NoiseFiltering)
 export(Normalizedata)
 export(PCAplotSymbols)
 export(PPI)
+export(PSCANseq)
 export(PlotMBorderPCA)
-export(Plotmclust)
+export(PlotmclustMB)
 export(RpartDT)
-export(binompval)
-export(clustfun)
+export(RpartEVAL)
+export(VolcanoPlot)
 export(comptSNE)
 export(comptsneMB)
-export(cross.val)
-export(dist.gen)
-export(downsample)
-export(estimateSizeFactorsForMatrix)
 export(plotExptSNE)
 export(plotGap)
 export(plotMBLabelstSNE)
+export(plotOrderKMtsne)
+export(plotOrderMBtsne)
 export(plotSilhouette)
 export(plotSymbolstSNE)
 export(plotexptsneMB)
@@ -43,22 +43,8 @@ export(plotsilhouetteMB)
 export(plottSNE)
 export(plottsneMB)
 exportClasses(PSCANseq)
-exportMethods(FindOutliersKM)
-exportMethods(FindOutliersMB)
 exportMethods(KMClustDiffGenes)
-exportMethods(KMclustheatmap)
 exportMethods(MBClustDiffGenes)
-exportMethods(MBclustheatmap)
-exportMethods(comptSNE)
-exportMethods(comptsneMB)
-exportMethods(plotExptSNE)
-exportMethods(plotMBLabelstSNE)
-exportMethods(plotSilhouette)
-exportMethods(plotSymbolstSNE)
-exportMethods(plotexptsneMB)
-exportMethods(plotsilhouetteMB)
-exportMethods(plottSNE)
-exportMethods(plottsneMB)
 importFrom(NetIndices,GenInd)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RWeka,J48)
@@ -69,13 +55,9 @@ importFrom(biomaRt,getBM)
 importFrom(biomaRt,useDataset)
 importFrom(biomaRt,useMart)
 importFrom(boot,boot)
-importFrom(cluster,clusGap)
-importFrom(cluster,maxSE)
-importFrom(cluster,silhouette)
 importFrom(dplyr,select)
 importFrom(fpc,calinhara)
 importFrom(fpc,cluster.stats)
-importFrom(fpc,clusterboot)
 importFrom(fpc,dudahart2)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
@@ -132,7 +114,6 @@ importFrom(matrixStats,rowVars)
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
 importFrom(methods,new)
-importFrom(methods,validObject)
 importFrom(partykit,as.party)
 importFrom(philentropy,distance)
 importFrom(png,readPNG)
@@ -144,22 +125,16 @@ importFrom(samr,samr.compute.delta.table)
 importFrom(samr,samr.compute.siggenes.table)
 importFrom(samr,samr.plot)
 importFrom(statmod,glmgam.fit)
-importFrom(stats,aggregate)
-importFrom(stats,as.dist)
 importFrom(stats,coef)
-importFrom(stats,cor)
 importFrom(stats,dist)
 importFrom(stats,fitted.values)
 importFrom(stats,hclust)
-importFrom(stats,kmeans)
 importFrom(stats,lm)
-importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(stats,pbinom)
 importFrom(stats,pchisq)
 importFrom(stats,pnbinom)
 importFrom(stats,prcomp)
-importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tsne,tsne)
