Fixed documentation for clean check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,19 +42,26 @@ Collate:
     'DIscBIO-generic-Clustexp.R'
     'DIscBIO-generic-DEGanalysis.R'
     'DIscBIO-generic-DEGanalysisM.R'
+    'DIscBIO-generic-FinalPreprocessing.R'
     'DIscBIO-generic-FindOutliersKM.R'
     'DIscBIO-generic-FindOutliersMB.R'
     'DIscBIO-generic-KMClustDiffGenes.R'
     'DIscBIO-generic-KMclustheatmap.R'
+    'DIscBIO-generic-KmeanOrder.R'
     'DIscBIO-generic-MBClustDiffGenes.R'
     'DIscBIO-generic-MBclustheatmap.R'
+    'DIscBIO-generic-NoiseFiltering.R'
     'DIscBIO-generic-Normalizedata.R'
+    'DIscBIO-generic-PCAplotSymbols.R'
+    'DIscBIO-generic-PlotmclustMB.R'
     'DIscBIO-generic-comptSNE.R'
     'DIscBIO-generic-comptsneMB.R'
     'DIscBIO-generic-plotExptSNE.R'
     'DIscBIO-generic-plotGap.R'
     'DIscBIO-generic-plotKmeansLabelstSNE.R'
     'DIscBIO-generic-plotMBLabelstSNE.R'
+    'DIscBIO-generic-plotOrderKMtsne.R'
+    'DIscBIO-generic-plotOrderMBtsne.R'
     'DIscBIO-generic-plotSilhouette.R'
     'DIscBIO-generic-plotSymbolstSNE.R'
     'DIscBIO-generic-plotexptsneMB.R'
@@ -62,23 +69,16 @@ Collate:
     'DIscBIO-generic-plottSNE.R'
     'DIscBIO-generic-plottsneMB.R'
     'Exprmclust.R'
-    'FinalPreprocessing.R'
     'J48DT.R'
     'J48DTeval.R'
     'Jaccard.R'
-    'KmeanOrder.R'
     'Kmeansruns.R'
     'MB_Order.R'
     'NetAnalysis.R'
     'Networking.R'
-    'NoiseFiltering.R'
-    'PCAplotSymbols.R'
     'PPI.R'
     'PlotMBorderPCA.R'
-    'PlotmclustMB.R'
     'RpartDT.R'
     'RpartEVAL.R'
     'VolcanoPlot.R'
     'datasets.R'
-    'plotOrderKMtsne.R'
-    'plotOrderMBtsne.R'
