Fixed function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ exportMethods(ClassVectoringDT)
 exportMethods(Clustexp)
 exportMethods(DEGanalysis)
 exportMethods(DEGanalysisM)
-exportMethods(ExprmclustMB)
+exportMethods(Exprmclust)
 exportMethods(FinalPreprocessing)
 exportMethods(FindOutliersKM)
 exportMethods(FindOutliersMB)
