--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(RWeka,J48)
 importFrom(TSCAN,TSCANorder)
 importFrom(amap,K)
+importFrom(amap,Kmeans)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useDataset)
 importFrom(biomaRt,useMart)
@@ -58,7 +59,10 @@ importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
 importFrom(cluster,silhouette)
 importFrom(dplyr,select)
+importFrom(fpc,calinhara)
+importFrom(fpc,cluster.stats)
 importFrom(fpc,clusterboot)
+importFrom(fpc,dudahart2)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
@@ -86,6 +90,7 @@ importFrom(graphics,image)
 importFrom(graphics,layout)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
+importFrom(graphics,pairs)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
