--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,13 @@ export(MB_Order)
 export(NetAnalysis)
 export(Networking)
 export(PPI)
-export(PSCANseq)
+export(DISCBIO)
 export(PlotMBorderPCA)
 export(RpartDT)
 export(RpartEVAL)
 export(VolcanoPlot)
 export(plotGap)
-exportClasses(PSCANseq)
+exportClasses(DISCBIO)
 exportMethods(ClassVectoringDT)
 exportMethods(Clustexp)
 exportMethods(DEGanalysis)
