--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,5 @@
 Package: DIscBIO
+Date: 2020-01-29
 Title: DIscBIO: a user-friendly pipeline for biomarker discovery in single-cell transcriptomics
 Version: 0.0.0.9000
 Authors@R: 
