Added exported method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ exportMethods(PlotmclustMB)
 exportMethods(comptSNE)
 exportMethods(comptsneMB)
 exportMethods(plotExptSNE)
+exportMethods(plotKmeansLabelstSNE)
 exportMethods(plotMBLabelstSNE)
 exportMethods(plotOrderKMtsne)
 exportMethods(plotOrderMBtsne)
