Exported PlotMexpPCA to user

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(MB_Order)
 export(NetAnalysis)
 export(Networking)
 export(PPI)
+export(PlotMBexpPCA)
 export(PlotMBorderPCA)
 export(RpartDT)
 export(RpartEVAL)
