--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,6 +77,7 @@ Collate:
     'NetAnalysis.R'
     'Networking.R'
     'PPI.R'
+    'PlotMBexpPCA.R'
     'PlotMBorderPCA.R'
     'RpartDT.R'
     'RpartEVAL.R'
