--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ exportClasses(DISCBIO)
 exportMethods(ClassVectoringDT)
 exportMethods(Clustexp)
 exportMethods(DEGanalysis)
-exportMethods(DEGanalysisM)
+exportMethods(DEGanalysis2clust)
 exportMethods(Exprmclust)
 exportMethods(FinalPreprocessing)
 exportMethods(FindOutliersKM)
