--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(biomaRt,getBM)
 importFrom(biomaRt,useDataset)
 importFrom(biomaRt,useMart)
 importFrom(boot,boot)
+importFrom(calibrate,textxy)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
 importFrom(cluster,silhouette)
