--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,6 @@ importFrom(biomaRt,getBM)
 importFrom(biomaRt,useDataset)
 importFrom(biomaRt,useMart)
 importFrom(boot,boot)
-importFrom(calibrate,textxy)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
 importFrom(cluster,silhouette)
@@ -152,5 +151,6 @@ importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,var)
 importFrom(tsne,tsne)
+importFrom(utils,capture.output)
 importFrom(utils,download.file)
 importFrom(utils,write.csv)
