Minor fixes for cleaner check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(amap,K)
 importFrom(amap,Kmeans)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useDataset)
+importFrom(biomaRt,useEnsembl)
 importFrom(biomaRt,useMart)
 importFrom(boot,boot)
 importFrom(cluster,clusGap)
