Imported AnnotationDbi::keys

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ exportMethods(plotsilhouetteMB)
 exportMethods(plottSNE)
 exportMethods(plottsneMB)
 import(org.Hs.eg.db)
+importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(NetIndices,GenInd)
 importFrom(RColorBrewer,brewer.pal)
