Exported calibrate::textxy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(biomaRt,useDataset)
 importFrom(biomaRt,useEnsembl)
 importFrom(biomaRt,useMart)
 importFrom(boot,boot)
+importFrom(calibrate,textxy)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
 importFrom(cluster,silhouette)
