--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ LazyData: true
 Imports: methods, TSCAN, boot, httr, mclust, statmod, biomaRt, samr, igraph,
 	RWeka, partykit, grid, philentropy, NetIndices, png, matrixStats, grDevices,
 	readr, RColorBrewer, ggplot2, rpart, fpc, cluster, rpart.plot, amap, dplyr,
-	tsne, AnnotationDbi, org.Hs.eg.db
+	tsne, AnnotationDbi, org.Hs.eg.db, calibrate
 Depends:
     R (>= 3.5),
 Suggests: 
