--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,14 +6,4 @@ CONTRIBUTING.md
 DIscBIOlogo.png
 README.md
 notebook/
-valuesG1ms.csv
-DIscBIO.ipynb
-KM1.png
-KM2.png
-KM3.png
-MB1.png
-MB2.png
-MB3.png
-DiscBIO.png
-Data-Preprocessing.png
-Clustering.png
+data/valuesG1ms.rda
