Updated package description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,22 +6,23 @@ Authors@R:
     c(
         person(given = "Salim",
                family = "Ghannoum",
-               role = c("aut"),
+               role = c("aut", "cph"),
                email = "salim.ghannoum@medisin.uio.no"),
         person(given = "Alvaro",
                family = "Köhn-Luque",
-               role = c("aut"),
+               role = c("aut", "ths"),
                email = "alvaro.kohn-luque@medisin.uio.no"),
         person(given = "Waldir",
                family = "Leoncio",
-               role = c("cre"),
+               role = c("cre", "aut"),
                email = "w.l.netto@medisin.uio.no")
     )
 Description: An open, multi-algorithmic pipeline for easy, fast and efficient
     analysis of cellular sub-populations and the molecular signatures that 
     characterize them. The pipeline consists of four successive steps: data 
     pre-processing, cellular clustering with pseudo-temporal ordering, defining 
-    differential expressed genes and biomarker identification
+    differential expressed genes and biomarker identification. This package 
+    implements extensions of the work published by Ghannoum et. al. 
     <doi:10.1101/700989>.
 License: MIT + file LICENSE
 Encoding: UTF-8
