Fixed MB heatmap issue involving kmeansCBI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(fpc,calinhara)
 importFrom(fpc,cluster.stats)
 importFrom(fpc,clusterboot)
 importFrom(fpc,dudahart2)
+importFrom(fpc,kmeansCBI)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
