Fixed check on R-stable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(igraph,minimum.spanning.tree)
 importFrom(matrixStats,rowVars)
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
+importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(partykit,as.party)
