--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Suggests:
     enrichR
 VignetteBuilder: knitr
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 BugReports: https://github.com/ocbe-uio/DIscBIO/issues
 Collate: 
     'DIscBIO-classes.R'
@@ -87,5 +87,6 @@ Collate:
     'RpartDT.R'
     'RpartEVAL.R'
     'VolcanoPlot.R'
+    'customConverters.R'
     'datasets.R'
     'retrieveBiomart.R'
