--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(PlotMBorderPCA)
 export(RpartDT)
 export(RpartEVAL)
 export(VolcanoPlot)
+export(as.DISCBIO)
+export(customConvertFeats)
 export(plotGap)
 exportClasses(DISCBIO)
 exportMethods(ClassVectoringDT)
