--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 # Source: https://docs.travis-ci.com/user/languages/r
 language: r
-cache:
-  packages: true
-  timeout: 1500
+cache: packages
 r:
   - bioc-release
   - bioc-devel
