Make sure to import SingleCellExperiment class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ importFrom(samr,samr)
 importFrom(samr,samr.compute.delta.table)
 importFrom(samr,samr.compute.siggenes.table)
 importFrom(samr,samr.plot)
+importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(statmod,glmgam.fit)
 importFrom(stats,aggregate)
 importFrom(stats,as.dist)
