--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(VolcanoPlot)
 export(as.DISCBIO)
 export(customConvertFeats)
 export(plotGap)
+export(DISCBIO2SingleCellExperiment)
 exportClasses(DISCBIO)
 exportMethods(ClassVectoringDT)
 exportMethods(Clustexp)
