--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,9 +33,9 @@ Encoding: UTF-8
 Imports: methods, TSCAN, boot, httr, mclust, statmod, biomaRt, samr, igraph,
 	RWeka, partykit, grid, philentropy, NetIndices, png, matrixStats, grDevices,
 	readr, RColorBrewer, ggplot2, rpart, fpc, cluster, rpart.plot, amap, dplyr,
-	tsne, AnnotationDbi, org.Hs.eg.db, calibrate, graphics, stats, utils, SingleCellExperiment
+	tsne, AnnotationDbi, org.Hs.eg.db, calibrate, graphics, stats, utils
 Depends:
-    R (>= 4.0),
+    R (>= 4.0), SingleCellExperiment
 Suggests:
     knitr,
     rmarkdown,
