--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,8 @@ importFrom(igraph,graph.adjacency)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,mean_distance)
 importFrom(igraph,minimum.spanning.tree)
+importFrom(impute,impute.knn)
+importFrom(matrixStats,rowMedians)
 importFrom(matrixStats,rowVars)
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
@@ -161,6 +163,8 @@ importFrom(stats,pnbinom)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,rpois)
+importFrom(stats,runif)
 importFrom(stats,var)
 importFrom(tsne,tsne)
 importFrom(utils,capture.output)
