--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,30 +3,38 @@ Date: 2020-05-04
 Title: A User-Friendly Pipeline for Biomarker Discovery in Single-Cell Transcriptomics
 Version: 0.99.8
 Authors@R:
-    c(
-        person(given = "Salim",
-               family = "Ghannoum",
-               role = c("aut", "cph"),
-               email = "salim.ghannoum@medisin.uio.no"),
-        person(given = "Alvaro",
-               family = "Köhn-Luque",
-               role = c("aut", "ths"),
-               email = "alvaro.kohn-luque@medisin.uio.no"),
-        person(given = "Waldir",
-               family = "Leoncio",
-               role = c("cre", "aut"),
-               email = "w.l.netto@medisin.uio.no"),
-        person(given = "Damiano",
-               family = "Fantini",
-               role = c("ctb"))
-    )
+	c(
+		person(
+			given = "Salim",
+			family = "Ghannoum",
+			role = c("aut", "cph"),
+			email = "salim.ghannoum@medisin.uio.no"
+		),
+		person(
+			given = "Alvaro",
+			family = "Köhn-Luque",
+			role = c("aut", "ths"),
+			email = "alvaro.kohn-luque@medisin.uio.no"
+		),
+		person(
+			given = "Waldir",
+			family = "Leoncio",
+			role = c("cre", "aut"),
+			email = "w.l.netto@medisin.uio.no"
+		),
+		person(
+			given = "Damiano",
+			family = "Fantini",
+			role = c("ctb")
+		)
+	)
 Description: An open, multi-algorithmic pipeline for easy, fast and efficient
-    analysis of cellular sub-populations and the molecular signatures that
-    characterize them. The pipeline consists of four successive steps: data
-    pre-processing, cellular clustering with pseudo-temporal ordering, defining
-    differential expressed genes and biomarker identification. This package
-    implements extensions of the work published by Ghannoum et. al.
-    <doi:10.1101/700989>.
+	analysis of cellular sub-populations and the molecular signatures that
+	characterize them. The pipeline consists of four successive steps: data
+	pre-processing, cellular clustering with pseudo-temporal ordering, defining
+	differential expressed genes and biomarker identification. This package
+	implements extensions of the work published by Ghannoum et. al.
+	<doi:10.1101/700989>.
 biocViews: SingleCell, Transcriptomics, Clustering, DecisionTree
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -35,63 +43,63 @@ Imports: methods, TSCAN, boot, httr, mclust, statmod, biomaRt, samr, igraph,
 	readr, RColorBrewer, ggplot2, rpart, fpc, cluster, rpart.plot, amap, dplyr,
 	tsne, AnnotationDbi, org.Hs.eg.db, calibrate, graphics, stats, utils, impute
 Depends:
-    R (>= 4.0), SingleCellExperiment
+	R (>= 4.0), SingleCellExperiment
 Suggests:
-    knitr,
-    rmarkdown,
+	knitr,
+	rmarkdown,
 	testthat,
-    enrichR,
-    Seurat
+	enrichR,
+	Seurat
 VignetteBuilder: knitr
 LazyData: true
 RoxygenNote: 7.1.0
 BugReports: https://github.com/ocbe-uio/DIscBIO/issues
 Collate:
-    'DIscBIO-classes.R'
-    'DIscBIO-generic-ClassVectoringDT.R'
-    'DIscBIO-generic-Clustexp.R'
-    'DIscBIO-generic-DEGanalysis.R'
-    'DIscBIO-generic-DEGanalysis2clust.R'
-    'DIscBIO-generic-Exprmclust.R'
-    'DIscBIO-generic-FinalPreprocessing.R'
-    'DIscBIO-generic-FindOutliersKM.R'
-    'DIscBIO-generic-FindOutliersMB.R'
-    'DIscBIO-generic-KMClustDiffGenes.R'
-    'DIscBIO-generic-KMclustheatmap.R'
-    'DIscBIO-generic-KmeanOrder.R'
-    'DIscBIO-generic-MBClustDiffGenes.R'
-    'DIscBIO-generic-MBclustheatmap.R'
-    'DIscBIO-generic-NoiseFiltering.R'
-    'DIscBIO-generic-Normalizedata.R'
-    'DIscBIO-generic-PCAplotSymbols.R'
-    'DIscBIO-generic-PlotmclustMB.R'
-    'DIscBIO-generic-comptSNE.R'
-    'DIscBIO-generic-comptsneMB.R'
-    'DIscBIO-generic-plotExptSNE.R'
-    'DIscBIO-generic-plotGap.R'
-    'DIscBIO-generic-plotKmeansLabelstSNE.R'
-    'DIscBIO-generic-plotMBLabelstSNE.R'
-    'DIscBIO-generic-plotOrderKMtsne.R'
-    'DIscBIO-generic-plotOrderMBtsne.R'
-    'DIscBIO-generic-plotSilhouette.R'
-    'DIscBIO-generic-plotSymbolstSNE.R'
-    'DIscBIO-generic-plotexptsneMB.R'
-    'DIscBIO-generic-plotsilhouetteMB.R'
-    'DIscBIO-generic-plottSNE.R'
-    'DIscBIO-generic-plottsneMB.R'
-    'J48DT.R'
-    'J48DTeval.R'
-    'Jaccard.R'
-    'MB_Order.R'
-    'NetAnalysis.R'
-    'Networking.R'
-    'PPI.R'
-    'PlotMBexpPCA.R'
-    'PlotMBorderPCA.R'
-    'RpartDT.R'
-    'RpartEVAL.R'
-    'VolcanoPlot.R'
-    'customConverters.R'
-    'datasets.R'
-    'retrieveBiomart.R'
-    'samr-adapted.R'
+	'DIscBIO-classes.R'
+	'DIscBIO-generic-ClassVectoringDT.R'
+	'DIscBIO-generic-Clustexp.R'
+	'DIscBIO-generic-DEGanalysis.R'
+	'DIscBIO-generic-DEGanalysis2clust.R'
+	'DIscBIO-generic-Exprmclust.R'
+	'DIscBIO-generic-FinalPreprocessing.R'
+	'DIscBIO-generic-FindOutliersKM.R'
+	'DIscBIO-generic-FindOutliersMB.R'
+	'DIscBIO-generic-KMClustDiffGenes.R'
+	'DIscBIO-generic-KMclustheatmap.R'
+	'DIscBIO-generic-KmeanOrder.R'
+	'DIscBIO-generic-MBClustDiffGenes.R'
+	'DIscBIO-generic-MBclustheatmap.R'
+	'DIscBIO-generic-NoiseFiltering.R'
+	'DIscBIO-generic-Normalizedata.R'
+	'DIscBIO-generic-PCAplotSymbols.R'
+	'DIscBIO-generic-PlotmclustMB.R'
+	'DIscBIO-generic-comptSNE.R'
+	'DIscBIO-generic-comptsneMB.R'
+	'DIscBIO-generic-plotExptSNE.R'
+	'DIscBIO-generic-plotGap.R'
+	'DIscBIO-generic-plotKmeansLabelstSNE.R'
+	'DIscBIO-generic-plotMBLabelstSNE.R'
+	'DIscBIO-generic-plotOrderKMtsne.R'
+	'DIscBIO-generic-plotOrderMBtsne.R'
+	'DIscBIO-generic-plotSilhouette.R'
+	'DIscBIO-generic-plotSymbolstSNE.R'
+	'DIscBIO-generic-plotexptsneMB.R'
+	'DIscBIO-generic-plotsilhouetteMB.R'
+	'DIscBIO-generic-plottSNE.R'
+	'DIscBIO-generic-plottsneMB.R'
+	'J48DT.R'
+	'J48DTeval.R'
+	'Jaccard.R'
+	'MB_Order.R'
+	'NetAnalysis.R'
+	'Networking.R'
+	'PPI.R'
+	'PlotMBexpPCA.R'
+	'PlotMBorderPCA.R'
+	'RpartDT.R'
+	'RpartEVAL.R'
+	'VolcanoPlot.R'
+	'customConverters.R'
+	'datasets.R'
+	'retrieveBiomart.R'
+	'samr-adapted.R'
