--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DIscBIO
-Date: 2020-05-04
+Date: 2020-06-16
 Title: A User-Friendly Pipeline for Biomarker Discovery in Single-Cell Transcriptomics
-Version: 0.99.8
+Version: 1.0.0
 Authors@R:
 	c(
 		person(
@@ -35,7 +35,6 @@ Description: An open, multi-algorithmic pipeline for easy, fast and efficient
 	differential expressed genes and biomarker identification. This package
 	implements extensions of the work published by Ghannoum et. al.
 	<doi:10.1101/700989>.
-biocViews: SingleCell, Transcriptomics, Clustering, DecisionTree
 License: MIT + file LICENSE
 Encoding: UTF-8
 Imports: methods, TSCAN, boot, httr, mclust, statmod, biomaRt, samr, igraph,
@@ -49,7 +48,8 @@ Suggests:
 	rmarkdown,
 	testthat,
 	enrichR,
-	Seurat
+	Seurat,
+	BiocManager
 VignetteBuilder: knitr
 LazyData: true
 RoxygenNote: 7.1.0
