--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,51 +55,53 @@ LazyData: true
 RoxygenNote: 7.1.1
 BugReports: https://github.com/ocbe-uio/DIscBIO/issues
 Collate:
-	'DIscBIO-classes.R'
-	'DIscBIO-generic-ClassVectoringDT.R'
-	'DIscBIO-generic-Clustexp.R'
-	'DIscBIO-generic-DEGanalysis.R'
-	'DIscBIO-generic-DEGanalysis2clust.R'
-	'DIscBIO-generic-Exprmclust.R'
-	'DIscBIO-generic-FinalPreprocessing.R'
-	'DIscBIO-generic-FindOutliersKM.R'
-	'DIscBIO-generic-FindOutliersMB.R'
-	'DIscBIO-generic-KMClustDiffGenes.R'
-	'DIscBIO-generic-KMclustheatmap.R'
-	'DIscBIO-generic-KmeanOrder.R'
-	'DIscBIO-generic-MBClustDiffGenes.R'
-	'DIscBIO-generic-MBclustheatmap.R'
-	'DIscBIO-generic-NoiseFiltering.R'
-	'DIscBIO-generic-Normalizedata.R'
-	'DIscBIO-generic-PCAplotSymbols.R'
-	'DIscBIO-generic-PlotmclustMB.R'
-	'DIscBIO-generic-comptSNE.R'
-	'DIscBIO-generic-comptsneMB.R'
-	'DIscBIO-generic-plotExptSNE.R'
-	'DIscBIO-generic-plotGap.R'
-	'DIscBIO-generic-plotKmeansLabelstSNE.R'
-	'DIscBIO-generic-plotMBLabelstSNE.R'
-	'DIscBIO-generic-plotOrderKMtsne.R'
-	'DIscBIO-generic-plotOrderMBtsne.R'
-	'DIscBIO-generic-plotSilhouette.R'
-	'DIscBIO-generic-plotSymbolstSNE.R'
-	'DIscBIO-generic-plotexptsneMB.R'
-	'DIscBIO-generic-plotsilhouetteMB.R'
-	'DIscBIO-generic-plottSNE.R'
-	'DIscBIO-generic-plottsneMB.R'
-	'J48DT.R'
-	'J48DTeval.R'
-	'Jaccard.R'
-	'MB_Order.R'
-	'NetAnalysis.R'
-	'Networking.R'
-	'PPI.R'
-	'PlotMBexpPCA.R'
-	'PlotMBorderPCA.R'
-	'RpartDT.R'
-	'RpartEVAL.R'
-	'VolcanoPlot.R'
-	'customConverters.R'
-	'datasets.R'
-	'retrieveBiomart.R'
-	'samr-adapted.R'
+    'DIscBIO-classes.R'
+    'DIscBIO-generic-ClassVectoringDT.R'
+    'DIscBIO-generic-Clustexp.R'
+    'DIscBIO-generic-DEGanalysis.R'
+    'DIscBIO-generic-DEGanalysis2clust.R'
+    'DIscBIO-generic-Exprmclust.R'
+    'DIscBIO-generic-FinalPreprocessing.R'
+    'DIscBIO-generic-FindOutliersKM.R'
+    'DIscBIO-generic-FindOutliersMB.R'
+    'DIscBIO-generic-KMClustDiffGenes.R'
+    'DIscBIO-generic-KMclustheatmap.R'
+    'DIscBIO-generic-KmeanOrder.R'
+    'DIscBIO-generic-MBClustDiffGenes.R'
+    'DIscBIO-generic-MBclustheatmap.R'
+    'DIscBIO-generic-NoiseFiltering.R'
+    'DIscBIO-generic-Normalizedata.R'
+    'DIscBIO-generic-PCAplotSymbols.R'
+    'DIscBIO-generic-PlotmclustMB.R'
+    'DIscBIO-generic-comptSNE.R'
+    'DIscBIO-generic-comptsneMB.R'
+    'DIscBIO-generic-plotExptSNE.R'
+    'DIscBIO-generic-plotGap.R'
+    'DIscBIO-generic-plotKmeansLabelstSNE.R'
+    'DIscBIO-generic-plotMBLabelstSNE.R'
+    'DIscBIO-generic-plotOrderKMtsne.R'
+    'DIscBIO-generic-plotOrderMBtsne.R'
+    'DIscBIO-generic-plotSilhouette.R'
+    'DIscBIO-generic-plotSymbolstSNE.R'
+    'DIscBIO-generic-plotexptsneMB.R'
+    'DIscBIO-generic-plotsilhouetteMB.R'
+    'DIscBIO-generic-plottSNE.R'
+    'DIscBIO-generic-plottsneMB.R'
+    'J48DT.R'
+    'J48DTeval.R'
+    'Jaccard.R'
+    'MB_Order.R'
+    'NetAnalysis.R'
+    'Networking.R'
+    'PPI.R'
+    'PlotMBexpPCA.R'
+    'PlotMBorderPCA.R'
+    'RpartDT.R'
+    'RpartEVAL.R'
+    'VolcanoPlot.R'
+    'customConverters.R'
+    'datasets.R'
+    'reformatSiggenes.R'
+    'replaceDecimals.R'
+    'retrieveBiomart.R'
+    'samr-adapted.R'
