Removed treated datasets and examples using them

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,6 +9,8 @@ notebook
 data/valuesG1ms.rda
 data/genes20k.rda
 data/pan_indrop_matrix_8000cells_18556genes.rda
+data/valuesG1msReduced_treated_K.rda
+data/valuesG1msReduced_treated_MB.rda
 apt.txt
 install.R
 postBuild
