--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,6 +6,8 @@ CONTRIBUTING.md
 DIscBIOlogo.png
 README.md
 notebook
+data/valuesG1msReduced
+data/valuesG1msTest
 data/valuesG1ms.rda
 data/genes20k.rda
 data/pan_indrop_matrix_8000cells_18556genes.rda
