--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Suggests:
 VignetteBuilder: knitr
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/ocbe-uio/DIscBIO#usage
 BugReports: https://github.com/ocbe-uio/DIscBIO/issues
 Collate:
     'DIscBIO-classes.R'
