--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,10 +123,6 @@ importFrom(png,readPNG)
 importFrom(readr,read_tsv)
 importFrom(rpart,rpart)
 importFrom(rpart.plot,rpart.plot)
-importFrom(samr,samr)
-importFrom(samr,samr.compute.delta.table)
-importFrom(samr,samr.compute.siggenes.table)
-importFrom(samr,samr.plot)
 importFrom(statmod,glmgam.fit)
 importFrom(stats,aggregate)
 importFrom(stats,as.dist)
@@ -147,6 +143,7 @@ importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stats,smooth.spline)
 importFrom(stats,var)
 importFrom(tsne,tsne)
 importFrom(utils,capture.output)
