--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ exportMethods(plotSymbolstSNE)
 exportMethods(plotexptsneMB)
 exportMethods(plottSNE)
 exportMethods(plottsneMB)
+import(org.Hs.eg.db)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(AnnotationDbi,keys)
 importFrom(NetIndices,GenInd)
