--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,8 +45,7 @@ Depends:
 	R (>= 4.0), SingleCellExperiment
 Suggests:
 	testthat,
-	Seurat,
-	BiocManager
+	Seurat
 LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/ocbe-uio/DIscBIO#usage
