Attempt to fix TravisCI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache:
   apt: true
   packages: true
   timeout: 3000
+addons:
+  apt:
+    packages:
+      - r-cran-rjava
 r:
   - release
   - devel
