--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ Suggests:
 	Seurat
 LazyData: true
 RoxygenNote: 7.1.1
-URL: https://github.com/ocbe-uio/DIscBIO#usage
+URL: https://github.com/ocbe-uio/DIscBIO
 BugReports: https://github.com/ocbe-uio/DIscBIO/issues
 Collate:
     'DIscBIO-classes.R'
