specify later impute
not sure why it's preferring the last pre-r-tagging build, but it is

require a later version that only has r version info included

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -39,7 +39,7 @@ dependencies:
   - bioconductor-org.hs.eg.db
 
   # graphics, stats, utils are part of core
-  - bioconductor-impute
+  - bioconductor-impute >=1.62
   - r-enrichr
 
   # additional unlisted dependencies
