Removed readr dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Imports: methods, TSCAN, boot, httr, mclust, statmod, igraph,
 	RWeka, philentropy, NetIndices, png, grDevices,
-	readr, RColorBrewer, ggplot2, rpart, fpc, cluster, rpart.plot,
+	RColorBrewer, ggplot2, rpart, fpc, cluster, rpart.plot,
 	tsne, AnnotationDbi, org.Hs.eg.db, graphics, stats, utils, impute
 Depends:
 	R (>= 4.0), SingleCellExperiment
