--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -11,12 +11,12 @@ name: R
 on:
   push:
     branches:
-      - develop
+      - dev
       - release/*
       - master
   pull_request:
     branches:
-      - develop
+      - dev
       - release/*
       - master
   workflow_dispatch:
