--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -75,6 +75,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          remotes::install_cran("BiocManager")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
