Testing new BiocManager config

--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -55,6 +55,7 @@ jobs:
           install.packages('remotes')
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+          install.packages("BiocManager")
         shell: Rscript {0}
 
       - name: Cache R packages
@@ -75,7 +76,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          remotes::install_cran("BiocManager")
+          BiocManager::install(c('SingleCellExperiment', 'TSCAN', 'AnnotationDbi', 'org.Hs.eg.db', 'impute'))
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
