Changed check step name

--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -74,7 +74,7 @@ jobs:
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
 
-      - name: Install dependencies
+      - name: Install package dependencies
         run: |
           BiocManager::install(c('SingleCellExperiment', 'TSCAN', 'AnnotationDbi', 'org.Hs.eg.db', 'impute'))
           remotes::install_deps(dependencies = TRUE)
