--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -79,6 +79,7 @@ jobs:
           BiocManager::install(c('SingleCellExperiment', 'TSCAN', 'AnnotationDbi', 'org.Hs.eg.db', 'impute'))
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+          remotes::install_cran("rJava")
           remotes::install_cran("RWeka")
         shell: Rscript {0}
 
