Trying Travis solution 1
From <https://stackoverflow.com/q/30012982/1169233>.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 # Source: https://docs.travis-ci.com/user/languages/r
 language: r
+sudo: required
+apt_packages:
+ - r-cran-rjava
 cache:
   apt: true
   packages: true
